feat: add img, remove horizontal scroll

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="index.css" />
     <title>Resume</title>
   </head>
-  <body>
+  <body style="overflow-x: hidden">
     <div class="card">
       <div class="img"></div>
       <span>About Me</span>
